Maths fixes for numerical methods section pt2

--- a/notebooks/c_mathematics/numerical_methods/14_ill_conditioning_errors.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/14_ill_conditioning_errors.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "The conditioning (or lack of, i.e. the ill-conditioning) of matrices we are trying to invert is incredibly important for the success of any algorithm.\n",
     "\n",
-    "As long as the matrix is non-singular, i.e. \\\\(\\det(A)\\ne 0\\\\), then an inverse exists, and a linear system with that \\\\(A\\\\) has a unique solution. What happens when we consider a matrix that is nearly singular, i.e. \\\\(\\det(A)\\\\) is very small?\n",
+    "As long as the matrix is non-singular, i.e. $\\det(A)\\ne 0$, then an inverse exists, and a linear system with that $A$ has a unique solution. What happens when we consider a matrix that is nearly singular, i.e. $\\det(A)$ is very small?\n",
     "\n",
     "```{index} Matrix norm\n",
     "```\n",
@@ -23,7 +23,7 @@
     "Well smallness is a relative term and so we need to ask the question of how large or small $\\det(A)$ is compared to something. That something is the **norm** of the matrix.\n",
     "\n",
     "```{margin} Note\n",
-    "Norms are always in absolute terms, therefore, they are always positive. We will use \\\\(||||\\\\) to symbolise a norm of a matrix.\n",
+    "Norms are always in absolute terms, therefore, they are always positive. We will use $||||$ to symbolise a norm of a matrix.\n",
     "\n",
     "```\n",
     "\n",
@@ -34,7 +34,7 @@
     "```{index} Vector norms\n",
     "```\n",
     "\n",
-    "Just as for vectors \\\\(\\pmb{v}\\\\) (assumed as a \\\\(n\\times 1\\\\) column vector) where we have multiple possible norms to help us decide quantify the magnitude of a vector:\n",
+    "Just as for vectors $\\pmb{v}$ (assumed as a $n\\times 1$ column vector) where we have multiple possible norms to help us decide quantify the magnitude of a vector:\n",
     "\n",
     "$$\n",
     "||\\pmb{v}||_2  = \\sqrt{v_1^2 + v_2^2 + \\ldots + v_n^2} = \\left(\\sum_{i=1}^n v_i^2 \\right)^{1/2}, \\quad{\\textrm{the two-norm or Euclidean norm}}\\\\\\\\\\\\\n",
@@ -47,7 +47,7 @@
     "```{index} Matrix norms\n",
     "```\n",
     "\n",
-    "We can define measures of the size of matrices, e.g. for \\\\(A\\\\) which for complete generality we will assume is of shape \\\\(m\\times n\\\\):\n",
+    "We can define measures of the size of matrices, e.g. for $A$ which for complete generality we will assume is of shape $m\\times n$:\n",
     "\n",
     "$$\n",
     "||A||_F = \\left(\\sum_{i=1}^m \\sum_{j=1}^n A_{ij}^2 \\right)^{1/2}, \\quad{\\textrm{the matrix Euclidean or Frobenius norm}}\\\\\\\\\\\\\n",
@@ -176,9 +176,9 @@
     "\n",
     "The (ill-)conditioning of a matrix is measured with the matrix condition number:\n",
     "\n",
-    "\\\\[\\textrm{cond}(A) = \\|A\\|\\|A^{-1}\\|.\\\\]\n",
+    "$$\\textrm{cond}(A) = \\|A\\|\\|A^{-1}\\|.$$\n",
     "\n",
-    "If this is close to one then \\\\(A\\\\) is termed well-conditioned; the value increases with the degree of ill-conditioning, reaching infinity for a singular matrix.\n",
+    "If this is close to one then $A$ is termed well-conditioned; the value increases with the degree of ill-conditioning, reaching infinity for a singular matrix.\n",
     "\n",
     "Let's evaluate the condition number for the matrix above."
    ]
@@ -230,28 +230,28 @@
     "\n",
     "Consider the following example\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\left(\n",
     "  \\begin{array}{cc}\n",
-    "    2 & 1 \\\\\\\\\\\\\n",
-    "    2 & 1 + \\epsilon  \\\\\\\\\\\\\n",
+    "    2 & 1 \\\\\n",
+    "    2 & 1 + \\epsilon\n",
     "  \\end{array}\n",
     "\\right)\\left(\n",
     "  \\begin{array}{c}\n",
-    "    x \\\\\\\\\\\\\n",
-    "    y \\\\\\\\\\\\\n",
+    "    x \\\\\n",
+    "    y \n",
     "  \\end{array}\n",
     "\\right) = \\left(\n",
     "  \\begin{array}{c}\n",
-    "    3 \\\\\\\\\\\\\n",
-    "    0 \\\\\\\\\\\\\n",
+    "    3 \\\\\n",
+    "    0\n",
     "  \\end{array}\n",
     "\\right)\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
-    "When \\\\(\\epsilon=0\\\\) the two columns/rows are not linear independent, and hence the determinant of this matrix is zero, the condition number is infinite, and the linear system does not have a solution (as the two equations would be telling us the contradictory information that \\\\(2x+y\\\\) is equal to 3 and is also equal to 0).\n",
+    "When $\\epsilon=0$ the two columns/rows are not linear independent, and hence the determinant of this matrix is zero, the condition number is infinite, and the linear system does not have a solution (as the two equations would be telling us the contradictory information that $2x+y$ is equal to 3 and is also equal to 0).\n",
     "\n",
-    "Let's consider a range of values \\\\(\\epsilon\\\\) and calculate matrix deteterminant and condition number:"
+    "Let's consider a range of values $\\epsilon$ and calculate matrix deteterminant and condition number:"
    ]
   },
   {
@@ -291,11 +291,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We find for \\\\(\\epsilon=0.001\\\\) that \\\\(\\det(A)=0.002\\\\) (i.e. quite a lot smaller than the other coefficients in the matrix) and \\\\(\\textrm{cond}(A)\\approx 5000\\\\).\n",
+    "We find for $\\epsilon=0.001$ that $\\det(A)=0.002$ (i.e. quite a lot smaller than the other coefficients in the matrix) and $\\textrm{cond}(A)\\approx 5000$.\n",
     "\n",
-    "Change to \\\\(\\epsilon=0.002\\\\) causes 100% change in both components of the solution. This is the consequence of the matrix being ill-conditioned - we should not trust the numerical solution to ill-conditioned problems.\n",
+    "Change to $\\epsilon=0.002$ causes 100% change in both components of the solution. This is the consequence of the matrix being ill-conditioned - we should not trust the numerical solution to ill-conditioned problems.\n",
     "\n",
-    "A way to see this is to recognise that computers do not perform arithmetic exactly - they necessarily have to [truncate numbers](http://www.mathwords.com/t/truncating_a_number.htm) at a certain number of significant figures, performing multiple operations with these truncated numbers can lead to an erosion of accuracy. Often this is not a problem, but these so-called [roundoff](http://mathworld.wolfram.com/RoundoffError.html) errors in algorithms generating \\\\(A\\\\), or operating on \\\\(A\\\\) as in Gaussian elimination, will lead to small inaccuracies in the coefficients of the matrix. Hence, in the case of ill-conditioned problems, will fall foul of the issue seen above where a very small error in an input to the algorithm led to a far larger error in an output.\n",
+    "A way to see this is to recognise that computers do not perform arithmetic exactly - they necessarily have to [truncate numbers](http://www.mathwords.com/t/truncating_a_number.htm) at a certain number of significant figures, performing multiple operations with these truncated numbers can lead to an erosion of accuracy. Often this is not a problem, but these so-called [roundoff](http://mathworld.wolfram.com/RoundoffError.html) errors in algorithms generating $A$, or operating on $A$ as in Gaussian elimination, will lead to small inaccuracies in the coefficients of the matrix. Hence, in the case of ill-conditioned problems, will fall foul of the issue seen above where a very small error in an input to the algorithm led to a far larger error in an output.\n",
     "\n",
     "## Roundoff errors\n",
     "```{index} Roundoff errors\n",
@@ -308,15 +308,15 @@
     "\n",
     "As an example, consider the mathematical formula\n",
     "\n",
-    "\\\\[f(x)=(1-x)^{10}.\\\\]\n",
+    "$$f(x)=(1-x)^{10}.$$\n",
     "\n",
     "We can relatively easily expand this out by hand\n",
     "\n",
-    "\\\\[f(x)=1- 10x + 45x^2 - 120x^3 + 210x^4 - 252x^5 + 210x^6 - 120x^7 + 45x^8 - 10x^9 + x^{10}.\\\\]\n",
+    "$$f(x)=1- 10x + 45x^2 - 120x^3 + 210x^4 - 252x^5 + 210x^6 - 120x^7 + 45x^8 - 10x^9 + x^{10}.$$\n",
     "\n",
-    "Mathematically these two expressions for \\\\(f(x)\\\\) are identical; when evaluated by a computer different operations will be performed, which should give the same answer. For numbers \\\\(x\\\\) away from \\\\(1\\\\) these two expressions do return (pretty much) the same answer.  \n",
+    "Mathematically these two expressions for $f(x)$ are identical; when evaluated by a computer different operations will be performed, which should give the same answer. For numbers $x$ away from $1$ these two expressions do return (pretty much) the same answer.  \n",
     "\n",
-    "However, for \\\\(x\\\\) close to 1 the second expression adds and subtracts individual terms of increasing size which should largely cancel out, but they don't to sufficient accuracy due to round off errors; these errors accumulate with more and more operations, leading a [loss of significance](https://en.wikipedia.org/wiki/Loss_of_significance)."
+    "However, for $x$ close to 1 the second expression adds and subtracts individual terms of increasing size which should largely cancel out, but they don't to sufficient accuracy due to round off errors; these errors accumulate with more and more operations, leading a [loss of significance](https://en.wikipedia.org/wiki/Loss_of_significance)."
    ]
   },
   {
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see on the graph, for most of the domain, i.e. far away from 1.0, the expansion is almost the same as the unexpanded version. Near \\\\(x=1\\\\), the expansion creates huge errors in terms of relative difference.\n",
+    "As we can see on the graph, for most of the domain, i.e. far away from 1.0, the expansion is almost the same as the unexpanded version. Near $x=1$, the expansion creates huge errors in terms of relative difference.\n",
     "\n",
     "### Algorithm stability\n",
     "The susceptibility for a numerical algorithm to dampen (inevitable) errors, rather than to magnify them as we have seen in examples above, is termed stability. This is a concern for numerical linear algebra as considered here, as well as for the numerical solution of differential equations. In that case you don't want small errors to grow and accumulate as you propagate the solution to an ODE or PDE forward in time say. If your algorithm is not inherently stable, or has other limitation, you need to understand and appreciate this, as it can cause catastrophic failures!"
@@ -400,7 +400,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -414,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
