--- a/notebooks/c_mathematics/numerical_methods/15_iterative_methods_to_solve_matrix.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/15_iterative_methods_to_solve_matrix.ipynb
@@ -17,13 +17,13 @@
     "\n",
     "Direct methods perform operations on the linear equations (the matrix system), e.g. the substitution of one equation (e.g. Gaussian elimination). This transformed the equations making up the linear system into equivalent ones with the aim of eliminating unknowns from some of the equations and hence allowing for easy solution through back (or forward) substitution.\n",
     "\n",
-    "[Cramer's rule](https://en.wikipedia.org/wiki/Cramer%27s_rule) gives an explicit formula for the inverse of a matrix, or for the solution of a linear matrix system. The computational cost of this method (in terms of arithmetic operations required; also termed complexity) scales with \\\\((n+1)!\\\\), whereas the Gaussian elimination method (which is basically the substitution method) scales with \\\\(n^3\\\\). For large \\\\(n\\\\) Gaussian elimination will clearly be more efficient. \\\\(n\\\\) here refers to the number of unknowns or equations, or sometimes termed the degrees of freedom of the problem.\n",
+    "[Cramer's rule](https://en.wikipedia.org/wiki/Cramer%27s_rule) gives an explicit formula for the inverse of a matrix, or for the solution of a linear matrix system. The computational cost of this method (in terms of arithmetic operations required; also termed complexity) scales with $(n+1)!$, whereas the Gaussian elimination method (which is basically the substitution method) scales with $n^3$. For large $n$ Gaussian elimination will clearly be more efficient. $n$ here refers to the number of unknowns or equations, or sometimes termed the degrees of freedom of the problem.\n",
     "\n",
-    "An advantage of direct methods is that they provide the exact solution (assuming exact arithmetic, i.e. ignoring the round off related issues) in a finite number of operations. However, as pointed out previously, \\\\(n\\\\) could be billions for hard-core applications such as in numerical weather forecasting. In this case the \\\\(n^3\\\\) operations required of a direct algorithm such as Gaussian elimination is completely prohibitive. In an attempt to further reduce this cost **iterative algorithms** were devised.\n",
+    "An advantage of direct methods is that they provide the exact solution (assuming exact arithmetic, i.e. ignoring the round off related issues) in a finite number of operations. However, as pointed out previously, $n$ could be billions for hard-core applications such as in numerical weather forecasting. In this case the $n^3$ operations required of a direct algorithm such as Gaussian elimination is completely prohibitive. In an attempt to further reduce this cost **iterative algorithms** were devised.\n",
     "\n",
-    "These algorithms start with an initial guess at the solution (\\\\(\\pmb{x}_0\\\\)), and iteratively improve this producing a series of approximate answers \\\\(\\pmb{x}_k\\\\). For the exact answer to the matrix system \\\\(A\\pmb{x} = \\pmb{b}\\\\), we know that the residual vector \\\\(\\pmb{r} = A\\pmb{x}-\\pmb{b}\\\\) is zero. For our iterative procedure, we can use the norm of the residual vector \\\\(\\pmb{r}_k = A\\pmb{x}_k-\\pmb{b}\\\\) based on the approximate solution \\\\(\\pmb{x}_k\\\\), as a measure of how close we are to solving the equation (the norm \\\\(||\\pmb{r}_k||\\\\) expresses this as a single number). As we iterate further, we hope to drive down this number and we may stop the iterations at some small (non-zero) residual norm tolerance level. The final iteration gives us an answer \\\\(\\pmb{x}_k\\\\) which is still an approximation to the solution and not the exact solution we would obtain with direct methods. The residual norm tolerance stopping criteria therefore needs to be thought about carefully, e.g. depending on how accurate a solution \\\\(\\pmb{x}\\\\) we require.\n",
+    "These algorithms start with an initial guess at the solution ($\\pmb{x}_0$), and iteratively improve this producing a series of approximate answers $\\pmb{x}_k$. For the exact answer to the matrix system $A\\pmb{x} = \\pmb{b}$, we know that the residual vector $\\pmb{r} = A\\pmb{x}-\\pmb{b}$ is zero. For our iterative procedure, we can use the norm of the residual vector $\\pmb{r}_k = A\\pmb{x}_k-\\pmb{b}$ based on the approximate solution $\\pmb{x}_k$, as a measure of how close we are to solving the equation (the norm $||\\pmb{r}_k||$ expresses this as a single number). As we iterate further, we hope to drive down this number and we may stop the iterations at some small (non-zero) residual norm tolerance level. The final iteration gives us an answer $\\pmb{x}_k$ which is still an approximation to the solution and not the exact solution we would obtain with direct methods. The residual norm tolerance stopping criteria therefore needs to be thought about carefully, e.g. depending on how accurate a solution $\\pmb{x}$ we require.\n",
     "\n",
-    "Since well through iterative methods, \\\\(\\pmb{x}_k\\\\) is still very much an approximation rather than an exact answer, you could imagine why weather forecasting, which uses iterative methods, is still very much an approximation rather than an exact answer. However, our current exact methods are prohibitively expensive in terms of time taken, so iterative method is the best we have. You could imagine why weather forecasting is very strict on time. For large agricultural farms which use remote sensing for weather monitoring and forecast, it would be useless to tell them the exact solution to a storm a long time after the storm has passed and devastated the crop production because you tried to solve the equations involved exactly, and from the time the storm was on the horizon it took you such a long time to find the exact solution, assuming that such an exact solution even exist in the 1st place. Our most powerful supercomputers are needed for weather forecasting even if we used iterative methods.\n",
+    "Since well through iterative methods, $\\pmb{x}_k$ is still very much an approximation rather than an exact answer, you could imagine why weather forecasting, which uses iterative methods, is still very much an approximation rather than an exact answer. However, our current exact methods are prohibitively expensive in terms of time taken, so iterative method is the best we have. You could imagine why weather forecasting is very strict on time. For large agricultural farms which use remote sensing for weather monitoring and forecast, it would be useless to tell them the exact solution to a storm a long time after the storm has passed and devastated the crop production because you tried to solve the equations involved exactly, and from the time the storm was on the horizon it took you such a long time to find the exact solution, assuming that such an exact solution even exist in the 1st place. Our most powerful supercomputers are needed for weather forecasting even if we used iterative methods.\n",
     "\n",
     "We have already considered Gaussian elimination (and back substitution) as examples of direct solution methods. We'll consider an example of an iterative method now.\n",
     "\n",
@@ -33,24 +33,25 @@
     "\n",
     "Consider a matrix system\n",
     "\n",
-    "\\\\[A\\pmb{x}=\\pmb{b} \\quad \\iff \\quad \\sum_{j=1}^nA_{ij}x_j=b_i,\\quad \\textrm{for}\\quad i=1,2,\\ldots, n.\\\\]\n",
+    "$$A\\pmb{x}=\\pmb{b} \\quad \\iff \\quad \\sum_{j=1}^nA_{ij}x_j=b_i,\\quad \\textrm{for}\\quad i=1,2,\\ldots, n.$$\n",
     "\n",
-    "Let's rewrite this by pulling out the term involving \\\\(x_i\\\\) (i.e. for each row \\\\(i\\\\) pull out the diagonal from the summation):\n",
+    "Let's rewrite this by pulling out the term involving $x_i$ (i.e. for each row $i$ pull out the diagonal from the summation):\n",
     "\n",
-    "\\\\[A_{ii}x_i + \\sum_{\\substack{j=1\\\\ j\\ne i}}^nA_{ij}x_j=b_i,\\quad  i=1,2,\\ldots, n.\\\\]\n",
+    "$$A_{ii}x_i + \\sum_{\\substack{j=1\\\\ j\\ne i}}^nA_{ij}x_j=b_i,\\quad  i=1,2,\\ldots, n.$$\n",
     "\n",
-    "We can then come up with a formula for our unknown \\\\(x_i\\\\):\n",
+    "We can then come up with a formula for our unknown $x_i$:\n",
     "\n",
-    "\\\\[x_i = \\frac{1}{A_{ii}}\\left(b_i- \\sum_{\\substack{j=1\\\\ j\\ne i}}^nA_{ij}x_j\\right),\\quad  i=1,2,\\ldots, n.\\\\]\n",
+    "$$x_i = \\frac{1}{A_{ii}}\\left(b_i- \\sum_{\\substack{j=1\\\\ j\\ne i}}^nA_{ij}x_j\\right),\\quad  i=1,2,\\ldots, n.$$\n",
     "\n",
-    "For each individual \\\\(x_i\\\\), all the other components of \\\\(\\pmb{x}\\\\) appearing on the RHS are also unknown and so this is an example of an implicit formula which doesn't help us directly, but does suggest the following iterative scheme:\n",
+    "For each individual $x_i$, all the other components of $\\pmb{x}$ appearing on the RHS are also unknown and so this is an example of an implicit formula which doesn't help us directly, but does suggest the following iterative scheme:\n",
     "\n",
-    "* starting from a guess at the solution \\\\(\\pmb{x}^{(0)}\\\\)\n",
+    "* starting from a guess at the solution $\\pmb{x}^{(0)}$\n",
     "\n",
-    "* iterate for \\\\(k>0\\\\)\n",
-    "    \\\\[x_i^{(k)} = \\frac{1}{A_{ii}}\\left(b_i- \\sum_{\\substack{j=1\\\\ j\\ne i}}^nA_{ij}x_j^{(k-1)}\\right),\\quad  i=1,2,\\ldots, n.\\\\]\n",
+    "* iterate for $k>0$\n",
     "\n",
-    "For this iteration, for a fixed \\\\(k\\\\), it does not matter in which order we perform the operations over \\\\(i\\\\) as the right hand side only contains the entries of \\\\(\\pmb{x}\\\\) at the previous iteration."
+    "    $$x_i^{(k)} = \\frac{1}{A_{ii}}\\left(b_i- \\sum_{\\substack{j=1\\\\ j\\ne i}}^nA_{ij}x_j^{(k-1)}\\right),\\quad  i=1,2,\\ldots, n.$$\n",
+    "\n",
+    "For this iteration, for a fixed $k$, it does not matter in which order we perform the operations over $i$ as the right hand side only contains the entries of $\\pmb{x}$ at the previous iteration."
    ]
   },
   {
@@ -155,12 +156,13 @@
     "```\n",
     "We can make a small improvement to Jacobi's method using the updated components of the solution vector as soon as they become available:\n",
     "\n",
-    "* starting from a guess at the solution \\\\(\\pmb{x}^{(0)}\\\\)\n",
+    "* starting from a guess at the solution $\\pmb{x}^{(0)}$\n",
     "\n",
-    "* iterate for \\\\(k>0\\\\)\n",
-    "    \\\\[x_i^{(k)} = \\frac{1}{A_{ii}}\\left(b_i- \\sum_{\\substack{j=1\\\\ j< i}}^nA_{ij}x_j^{(k)} - \\sum_{\\substack{j=1\\\\ j> i}}^nA_{ij}x_j^{(k-1)}\\right),\\quad  i=1,2,\\ldots, n.\\\\]\n",
+    "* iterate for $k>0$\n",
     "\n",
-    "As opposed to Jacobi, we can overwrite the entries of \\\\(\\pmb{x}\\\\) as they are updated, with Jacobi we need to store both the new as well as the old iteration (i.e. not overwrite the old entries until we have finished with them - which was not until the end of every iteration).\n",
+    "    $$x_i^{(k)} = \\frac{1}{A_{ii}}\\left(b_i- \\sum_{\\substack{j=1\\\\ j< i}}^nA_{ij}x_j^{(k)} - \\sum_{\\substack{j=1\\\\ j> i}}^nA_{ij}x_j^{(k-1)}\\right),\\quad  i=1,2,\\ldots, n.$$\n",
+    "\n",
+    "As opposed to Jacobi, we can overwrite the entries of $\\pmb{x}$ as they are updated, with Jacobi we need to store both the new as well as the old iteration (i.e. not overwrite the old entries until we have finished with them - which was not until the end of every iteration).\n",
     "\n",
     "As we are using updated knowledge immediately, the [Gauss-Seidel algorithm](https://en.wikipedia.org/wiki/Gauss%E2%80%93Seidel_method) should converge faster than Jacobi, but note that this convergence can only be guaranteed for matrices which are diagonally dominant (for every row, the magnitude of value on the main diagonal is greater than the sum of the magnitudes of all the other entries in that row), or if the matrix is symmetric positive definite.\n",
     "\n",
@@ -305,7 +307,7 @@
     "```\n",
     "Matrices which result from the numerical solution of differential equations are generally [**sparse**](https://en.wikipedia.org/wiki/Sparse_matrix) which means that most entries are zero (the alternative is termed **dense**).  Knowing which entries are zero means that we can devise more efficient matrix storage methods, as well as more efficient implementations of the above algorithms (e.g. by not bothering to do operations that we know involve multiplications by zero - we know the answer will be zero).\n",
     "\n",
-    "As an example, for the two iterative methods shown above (Jacobi and Gauss-Seidel), the cost of each iteration is quadratically dependent on the number of unknowns \\\\(n\\\\), since we need to loop through all the entries of the \\\\(n\\times n\\\\) matrix \\\\(A\\\\). For a fixed number of iterations the computational cost of these methods therefore scales as \\\\(n^2\\\\). If we know that each row only contains a fixed, small number of non-zero entries however, we can simply skip the zero entries and the cost per iteration becomes linear in \\\\(n\\\\). These scalings of \\\\(n^2\\\\) for dense and \\\\(n\\\\) for sparse matrices for the cost per iteration are typical for iterative methods. Unfortunately this does not mean that the overall cost of an iterative method is also \\\\(n^2\\\\) or \\\\(n\\\\), as the number of iterations that is needed to achieve a certain accuracy quite often also increases for larger problem sizes. The number of required iterations typically only increases very slowly however, so that the cost of the method is still considerably cheaper than direct methods, in particular for very large problems.\n",
+    "As an example, for the two iterative methods shown above (Jacobi and Gauss-Seidel), the cost of each iteration is quadratically dependent on the number of unknowns $n$, since we need to loop through all the entries of the $n\\times n$ matrix $A$. For a fixed number of iterations the computational cost of these methods therefore scales as $n^2$. If we know that each row only contains a fixed, small number of non-zero entries however, we can simply skip the zero entries and the cost per iteration becomes linear in $n$. These scalings of $n^2$ for dense and $n$ for sparse matrices for the cost per iteration are typical for iterative methods. Unfortunately this does not mean that the overall cost of an iterative method is also $n^2$ or $n$, as the number of iterations that is needed to achieve a certain accuracy quite often also increases for larger problem sizes. The number of required iterations typically only increases very slowly however, so that the cost of the method is still considerably cheaper than direct methods, in particular for very large problems.\n",
     "\n",
     "A huge range of iterative solution methods exist and the literature on this topic is massive. Below is an example of using SciPy to access the [conjugate gradient algorithm](https://en.wikipedia.org/wiki/Conjugate_gradient_method) which is a popular example of a method suitable for matrices which result from the numerical solution of differential equations."
    ]
@@ -462,25 +464,25 @@
    "source": [
     "### Example\n",
     "\n",
-    "Let us consider an electric circuit arranged in a regular grid of \\\\(n\\\\) rows and \\\\(m\\\\) columns. The nodes in the grid are numbered from 0 to \\\\(nm-1\\\\) as indicated in the diagram below.\n",
+    "Let us consider an electric circuit arranged in a regular grid of $n$ rows and $m$ columns. The nodes in the grid are numbered from 0 to $nm-1$ as indicated in the diagram below.\n",
     "\n",
     "```{figure} images_nm1/circuit.png\n",
     ":width: 300px\n",
     "```\n",
-    "We want to calculate the electric potential \\\\(V_i\\\\) in all of the nodes \\\\(i\\\\). A node \\\\(i\\\\) somewhere in the middle of the circuit is connected via resistor to nodes \\\\(i-1\\\\) and \\\\(i+1\\\\) to the left and right respectively, and to the nodes \\\\(i-m\\\\) and \\\\(i+m\\\\) in the rows above and below. For simplicity we assume that all resistors have the same resistance value \\\\(R\\\\). The first and last node of the circuit (0 and \\\\(nm-1\\\\)) to a battery via two additional resistors, with the same resistance value \\\\(R\\\\).\n",
+    "We want to calculate the electric potential $V_i$ in all of the nodes $i$. A node $i$ somewhere in the middle of the circuit is connected via resistor to nodes $i-1$ and $i+1$ to the left and right respectively, and to the nodes $i-m$ and $i+m$ in the rows above and below. For simplicity we assume that all resistors have the same resistance value $R$. The first and last node of the circuit (0 and $nm-1$) to a battery via two additional resistors, with the same resistance value $R$.\n",
     "\n",
-    "The sum of the currents coming into a node is zero (if we use a sign convention where a current coming into a node is positive and a current going out is negative. The currents between two nodes can be calculated using Ohm's law: \\\\(I=V/R\\\\) where \\\\(R\\\\) is the resistance of the resistor, and \\\\(V\\\\) is the potential difference between two nodes, say \\\\(V=V_i-V_{i-1}\\\\). Therefore we can write:\n",
+    "The sum of the currents coming into a node is zero (if we use a sign convention where a current coming into a node is positive and a current going out is negative. The currents between two nodes can be calculated using Ohm's law: $I=V/R$ where $R$ is the resistance of the resistor, and $V$ is the potential difference between two nodes, say $V=V_i-V_{i-1}$. Therefore we can write:\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\begin{eqnarray}\n",
-    "  0 &=& I_{i-1\\to i} + I_{i+1\\to i} + I_{i-m\\to i} + I_{i+m\\to i} \\\\\\\\\\\\\n",
-    "    &=& V_{i-1\\to i}/R + V_{i+1\\to i}/R + V_{i-m\\to i}/R + V_{i+m\\to i}/R \\\\\\\\\\\\\n",
-    "    &=& (V_{i}-V_{i-1})/R + (V_{i}-V_{i+1})/R + (V_{i}-V_{i-m})/R + (V_{i}-V_{i+m})/R \\\\\\\\\\\\\n",
+    "  0 &=& I_{i-1\\to i} + I_{i+1\\to i} + I_{i-m\\to i} + I_{i+m\\to i} \\\\\n",
+    "    &=& V_{i-1\\to i}/R + V_{i+1\\to i}/R + V_{i-m\\to i}/R + V_{i+m\\to i}/R \\\\\n",
+    "    &=& (V_{i}-V_{i-1})/R + (V_{i}-V_{i+1})/R + (V_{i}-V_{i-m})/R + (V_{i}-V_{i+m})/R \\\\\n",
     "    &=& (4V_{i}-V_{i-1}-V_{i+1}-V_{i-m}-V_{i+m})/R\n",
     "\\end{eqnarray}\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
-    "This gives us one linear equation for each node in the circuit (with slight modifications for nodes that are not in the interior). These can be combined into a linear system \\\\(Ax=b\\\\)  which is assembled in the code below:"
+    "This gives us one linear equation for each node in the circuit (with slight modifications for nodes that are not in the interior). These can be combined into a linear system $Ax=b$  which is assembled in the code below:"
    ]
   },
   {
@@ -552,7 +554,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -566,7 +568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
