--- a/notebooks/c_mathematics/numerical_methods/11_linear_algebra_intro.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/11_linear_algebra_intro.ipynb
@@ -15,113 +15,114 @@
     "\n",
     "We can re-write a system of simultaneous (linear) equations in a matrix form. For example, let's consider:\n",
     "\n",
-    "\\\\[\\begin{eqnarray*}\n",
-    "  2x + 3y &=& 7 \\\\\\\\\\\\\n",
+    "$$\\begin{eqnarray*}\n",
+    "  2x + 3y &=& 7 \\\\\n",
     "   x - 4y &=& 3\n",
-    "\\end{eqnarray*}\\\\]\n",
+    "\\end{eqnarray*}$$\n",
     "\n",
     "It can be rewritten in a matrix form:\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\left(\n",
     "  \\begin{array}{rr}\n",
-    "    2 & 3 \\\\\\\\\\\\\n",
-    "    1 & -4  \\\\\\\\\\\\\n",
+    "    2 & 3 \\\\\n",
+    "    1 & -4\n",
     "  \\end{array}\n",
     "\\right)\\left(\n",
     "  \\begin{array}{c}\n",
-    "    x \\\\\\\\\\\\\n",
-    "    y \\\\\\\\\\\\\n",
+    "    x \\\\\n",
+    "    y\n",
     "  \\end{array}\n",
     "\\right) = \\left(\n",
     "  \\begin{array}{c}\n",
-    "    7 \\\\\\\\\\\\\n",
-    "    3 \\\\\\\\\\\\\n",
+    "    7 \\\\\n",
+    "    3\n",
     "  \\end{array}\n",
     "\\right)\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
     "We understand that this system always has the form of \n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\left(\n",
     "  \\begin{array}{rr}\n",
-    "    a & b \\\\\\\\\\\\\n",
-    "    c & d  \\\\\\\\\\\\\n",
+    "    a & b \\\\\n",
+    "    c & d  \n",
     "  \\end{array}\n",
     "\\right)\\left(\n",
     "  \\begin{array}{c}\n",
-    "    x \\\\\\\\\\\\\n",
-    "    y \\\\\\\\\\\\\n",
+    "    x \\\\\n",
+    "    y\n",
     "  \\end{array}\n",
     "\\right) = \\left(\n",
     "  \\begin{array}{c}\n",
-    "    e \\\\\\\\\\\\\n",
-    "    f \\\\\\\\\\\\\n",
+    "    e \\\\\n",
+    "    f\n",
     "  \\end{array}\n",
     "\\right),\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
-    "where \\\\(a,b,c,d,e,f\\\\) are arbitrary constants.\n",
+    "where $a,b,c,d,e,f$ are arbitrary constants.\n",
     "\n",
-    "Let's call the matrix which stores the coefficients of our system of linear equations to be \\\\(A\\\\)\n",
+    "Let's call the matrix which stores the coefficients of our system of linear equations to be $A$\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "A=\n",
     "\\left(\n",
     "  \\begin{array}{rr}\n",
-    "    a & b \\\\\\\\\\\\\n",
-    "    c & d  \\\\\\\\\\\\\n",
+    "    a & b \\\\\n",
+    "    c & d\n",
     "  \\end{array}\n",
     "\\right)\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
-    "and the matrix that contains our variables to be \\\\(\\mathbf{x}\\\\)\n",
+    "and the matrix that contains our variables to be $\\mathbf{x}$\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\mathbf{x}=\n",
     "\\left(\n",
     "  \\begin{array}{c}\n",
-    "    x \\\\\\\\\\\\\n",
-    "    y  \\\\\\\\\\\\\n",
+    "    x \\\\\n",
+    "    y\n",
     "  \\end{array}\n",
     "\\right).\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
-    "The matrix that contains the results of our system of linear equation will be called \\\\(\\mathbf{b}\\\\)\n",
+    "The matrix that contains the results of our system of linear equation will be called $\\mathbf{b}$\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\mathbf{b}=\n",
     "\\left(\n",
     "  \\begin{array}{c}\n",
-    "    e \\\\\\\\\\\\\n",
-    "    f  \\\\\\\\\\\\\n",
+    "    e \\\\\n",
+    "    f\n",
     "  \\end{array}\n",
     "\\right).\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
     "This system of equations can be represented as the matrix equation\n",
-    "\\\\[A\\pmb{x}=\\pmb{b}.\\\\]\n",
     "\n",
-    "More generally, consider an arbitrary system of \\\\(n\\\\) linear equations for \\\\(n\\\\) unknowns\n",
+    "$$A\\pmb{x}=\\pmb{b}.$$\n",
     "\n",
-    "\\\\[\n",
+    "More generally, consider an arbitrary system of $n$ linear equations for $n$ unknowns\n",
+    "\n",
+    "$$\n",
     "\\begin{eqnarray*}\n",
     "  A_{11}x_1 + A_{12}x_2 + \\dots + A_{1n}x_n &=& b_1 \\\\\\\\\\\\ \n",
     "  A_{21}x_1 + A_{22}x_2 + \\dots + A_{2n}x_n &=& b_2 \\\\\\\\\\\\ \n",
     "  \\vdots &=& \\vdots \\\\\\\\\\\\ \n",
     "  A_{n1}x_1 + A_{n2}x_2 + \\dots + A_{nn}x_n &=& b_n\n",
     "\\end{eqnarray*}\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
-    "where \\\\(A_{ij}\\\\) are the constant coefficients of the linear system, \\\\(x_j\\\\) are the unknown variables, and \\\\(b_i\\\\)\n",
-    "are the terms on the right hand side (RHS). Here the index \\\\(i\\\\) is referring to the equation number\n",
-    "(the row in the matrix below), with the index \\\\(j\\\\) referring to the component of the unknown\n",
-    "vector \\\\(\\pmb{x}\\\\) (the column of the matrix).\n",
+    "where $A_{ij}$ are the constant coefficients of the linear system, $x_j$ are the unknown variables, and $b_i$\n",
+    "are the terms on the right hand side (RHS). Here the index $i$ is referring to the equation number\n",
+    "(the row in the matrix below), with the index $j$ referring to the component of the unknown\n",
+    "vector $\\pmb{x}$ (the column of the matrix).\n",
     "\n",
-    "This system of equations can be represented as the matrix equation \\\\(A\\pmb{x}=\\pmb{b}\\\\):\n",
+    "This system of equations can be represented as the matrix equation $A\\pmb{x}=\\pmb{b}$:\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\left(\n",
     "  \\begin{array}{cccc}\n",
     "    A_{11} & A_{12} & \\dots & A_{1n} \\\\\\\\\\\\\n",
@@ -144,26 +145,26 @@
     "                     b_n \\\\\\\\\\\\\n",
     "                   \\end{array}\n",
     "                 \\right)\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
     "\n",
-    "We can easily solve the above \\\\(2 \\times 2\\\\) example of two equations and two unknowns using substitution (e.g. multiply the second equation by 2 and subtract the first equation from the resulting equation to eliminate \\\\(x\\\\) and hence allowing us to find \\\\(y\\\\), then we could compute \\\\(x\\\\) from the first equation). We find:\n",
+    "We can easily solve the above $2 \\times 2$ example of two equations and two unknowns using substitution (e.g. multiply the second equation by 2 and subtract the first equation from the resulting equation to eliminate $x$ and hence allowing us to find $y$, then we could compute $x$ from the first equation). We find:\n",
     "\n",
-    "\\\\[ x=\\frac{37}{11}, \\quad y=\\frac{1}{11}.\\\\]\n",
+    "$$ x=\\frac{37}{11}, \\quad y=\\frac{1}{11}.$$\n",
     "\n",
     "```{margin} Note\n",
-    "Cases where the matrix is non-square, i.e. of shape \\\\(m \\times n\\\\) where \\\\(m\\ne n\\\\) correspond to the over- or under-determined systems where you have more or less equations than unknowns. \n",
+    "Cases where the matrix is non-square, i.e. of shape $m \\times n$ where $m\\ne n$ correspond to the over- or under-determined systems where you have more or less equations than unknowns. \n",
     "```\n",
     "\n",
-    "Example systems of \\\\(3\\times 3\\\\) are a little more complicated but doable. In this notebook, we consider the case of \\\\(n\\times n\\\\), where \\\\(n\\\\) could be billions (e.g. in AI or machine learning).\n",
+    "Example systems of $3\\times 3$ are a little more complicated but doable. In this notebook, we consider the case of $n\\times n$, where $n$ could be billions (e.g. in AI or machine learning).\n",
     "\n",
     "## Matrices in Python\n",
     "\n",
-    "We can use `numpy.arrays` to store matrices. The convention for one-dimensional vectors is to call them column vectors and have shape \\\\(n \\times 1\\\\). We can extend to higher dimensions through the introduction of matrices as two-dimensional arrays (more generally vectors and matrices are just two examples of {ref}`tensors <tensor_review>`). \n",
+    "We can use `numpy.arrays` to store matrices. The convention for one-dimensional vectors is to call them column vectors and have shape $n \\times 1$. We can extend to higher dimensions through the introduction of matrices as two-dimensional arrays (more generally vectors and matrices are just two examples of {ref}`tensors <tensor_review>`). \n",
     "\n",
-    "We use subscript indices to identify each component of the array or matrix, i.e. we can identify each component of the vector \\\\(\\pmb{v}\\\\) by \\\\(v_i\\\\), and each component of the matrix \\\\(A\\\\) by \\\\(A_{ij}\\\\).  \n",
+    "We use subscript indices to identify each component of the array or matrix, i.e. we can identify each component of the vector $\\pmb{v}$ by $v_i$, and each component of the matrix $A$ by $A_{ij}$.  \n",
     "\n",
-    "The dimension or shape of a vector/matrix is the number of rows and columns it posesses, i.e. \\\\(n \\times 1\\\\) and \\\\(m \\times n\\\\) for the examples above. Here is an example of how we can extend our use of the `numpy.array` to two dimensions in order to define a matrix \\\\(A\\\\)."
+    "The dimension or shape of a vector/matrix is the number of rows and columns it posesses, i.e. $n \\times 1$ and $m \\times n$ for the examples above. Here is an example of how we can extend our use of the `numpy.array` to two dimensions in order to define a matrix $A$."
    ]
   },
   {
@@ -195,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check total size of the array storing matrix \\\\(A\\\\). It will be \\\\(3\\times3=9\\\\):"
+    "Check total size of the array storing matrix $A$. It will be $3\\times3=9$:"
    ]
   },
   {
@@ -219,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the number of dimensions of matrix \\\\(A\\\\):"
+    "Check the number of dimensions of matrix $A$:"
    ]
   },
   {
@@ -243,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check the shape of the matrix \\\\(A\\\\):"
+    "Check the shape of the matrix $A$:"
    ]
   },
   {
@@ -267,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Transpose matrix \\\\(A\\\\):"
+    "Transpose matrix $A$:"
    ]
   },
   {
@@ -293,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the inverse of matrix \\\\(A\\\\):"
+    "Get the inverse of matrix $A$:"
    ]
   },
   {
@@ -321,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the determinant of matrix \\\\(A\\\\):"
+    "Get the determinant of matrix $A$:"
    ]
   },
   {
@@ -357,7 +358,7 @@
     "\n",
     "````\n",
     "\n",
-    "Multiply \\\\(A\\\\) with its inverse using the `@` matrix multiplication operator. Note that due to roundoff errors the off diagonal values are not exactly zero:"
+    "Multiply $A$ with its inverse using the `@` matrix multiplication operator. Note that due to roundoff errors the off diagonal values are not exactly zero:"
    ]
   },
   {
@@ -571,26 +572,26 @@
     "\n",
     "### Solving a linear system\n",
     "\n",
-    "Let's quickly consider the \\\\(2 \\times 2\\\\) case from the beginning of the notebook that we claimed the solution for to be\n",
+    "Let's quickly consider the $2 \\times 2$ case from the beginning of the notebook that we claimed the solution for to be\n",
     "\n",
-    "\\\\[x=\\frac{37}{11} \\quad\\text{and}\\quad y=\\frac{1}{11}.\\\\]\n",
+    "$$x=\\frac{37}{11} \\quad\\text{and}\\quad y=\\frac{1}{11}.$$\n",
     "\n",
     "To solve the matrix equation \n",
     "\n",
-    "\\\\[ A\\pmb{x}=\\pmb{b}\\\\]\n",
+    "$$ A\\pmb{x}=\\pmb{b}$$\n",
     "\n",
-    "we can simply multiply both sides by the inverse of the matrix \\\\(A\\\\) (if \\\\(A\\\\) is [invertible](https://en.wikipedia.org/wiki/Invertible_matrix)):\n",
+    "we can simply multiply both sides by the inverse of the matrix $A$ (if $A$ is [invertible](https://en.wikipedia.org/wiki/Invertible_matrix)):\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\begin{align}\n",
     "A\\pmb{x} & = \\pmb{b}\\\\\\\\\\\\\n",
     "\\implies A^{-1}A\\pmb{x} & = A^{-1}\\pmb{b}\\\\\\\\\\\\\n",
     "\\implies I\\pmb{x} & = A^{-1}\\pmb{b}\\\\\\\\\\\\\n",
     "\\implies \\pmb{x} & = A^{-1}\\pmb{b}\n",
     "\\end{align}\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
-    "so we can find the solution \\\\(\\pmb{x}\\\\) by multiplying the inverse of \\\\(A\\\\) with the RHS vector \\\\(\\pmb{b}\\\\)."
+    "so we can find the solution $\\pmb{x}$ by multiplying the inverse of $A$ with the RHS vector $\\pmb{b}$."
    ]
   },
   {
@@ -675,26 +676,27 @@
     "### Matrix multiplication\n",
     "\n",
     "\n",
-    "Let\n",
-    "\\\\[\n",
+    "Let \n",
+    "\n",
+    "$$\n",
     "A = \\left(\n",
     "  \\begin{array}{ccc}\n",
-    "    1 & 2 & 3 \\\\\\\\\\\\\n",
-    "    4 & 5 & 6 \\\\\\\\\\\\\n",
-    "    7 & 8 & 9 \\\\\\\\\\\\\n",
+    "    1 & 2 & 3 \\\\\n",
+    "    4 & 5 & 6 \\\\\n",
+    "    7 & 8 & 9 \n",
     "  \\end{array}\n",
     "\\right)\n",
     "\\mathrm{\\quad\\quad and \\quad\\quad}\n",
     "b = \\left(\n",
     "  \\begin{array}{c}\n",
-    "    2 \\\\\\\\\\\\\n",
-    "    4 \\\\\\\\\\\\\n",
-    "    6 \\\\\\\\\\\\\n",
+    "    2 \\\\\n",
+    "    4 \\\\\n",
+    "    6 \n",
     "  \\end{array}\n",
     "\\right)\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
-    "We will store \\\\(A\\\\) and \\\\(b\\\\) in NumPy arrays. We will create NumPy array \\\\(I\\\\) containing the identity matrix \\\\(I_3\\\\) and perform \\\\(A = A+I\\\\). Then we will substitute third column of \\\\(A\\\\) with \\\\(b\\\\). We will solve \\\\(Ax=b\\\\)."
+    "We will store $A$ and $b$ in NumPy arrays. We will create NumPy array $I$ containing the identity matrix $I_3$ and perform $A = A+I$. Then we will substitute third column of $A$ with $b$. We will solve $Ax=b$."
    ]
   },
   {
@@ -754,24 +756,24 @@
    "source": [
     "## Matrix properties\n",
     "\n",
-    "Consider \\\\(N\\\\) linear equations in \\\\(N\\\\) unknowns, \\\\(A\\pmb{x}=\\pmb{b}\\\\).\n",
+    "Consider $N$ linear equations in $N$ unknowns, $A\\pmb{x}=\\pmb{b}$.\n",
     "\n",
-    "this system has a unique solution provided that the determinant of \\\\(A\\\\), \\\\(\\det(A)\\\\), is non-zero. In this case the matrix is said to be non-singular.\n",
+    "this system has a unique solution provided that the determinant of $A$, $\\det(A)$, is non-zero. In this case the matrix is said to be non-singular.\n",
     "\n",
-    "If \\\\(\\det(A)=0\\\\) (with \\\\(A\\\\) then termed a singular matrix), then the linear system does not have a unique solution, it may have either infinite or no solutions.\n",
+    "If $\\det(A)=0$ (with $A$ then termed a singular matrix), then the linear system does not have a unique solution, it may have either infinite or no solutions.\n",
     "\n",
     "For example, consider\n",
     "\n",
-    "\\\\[\n",
+    "$$\n",
     "\\left(\n",
     "  \\begin{array}{rr}\n",
-    "    2 & 3 \\\\\\\\\\\\\n",
-    "    4 & 6  \\\\\\\\\\\\\n",
+    "    2 & 3 \\\\\n",
+    "    4 & 6 \n",
     "  \\end{array}\n",
     "\\right)\\left(\n",
     "  \\begin{array}{c}\n",
-    "    x \\\\\\\\\\\\\n",
-    "    y \\\\\\\\\\\\\n",
+    "    x \\\\\n",
+    "    y\n",
     "  \\end{array}\n",
     "\\right) = \\left(\n",
     "  \\begin{array}{c}\n",
@@ -779,33 +781,40 @@
     "    8 \\\\\n",
     "  \\end{array}\n",
     "\\right).\n",
-    "\\\\]\n",
+    "$$\n",
     "\n",
     "The second equation is simply twice the first, and hence a solution to the first equation is also automatically a solution to the second equation.\n",
     "\n",
     "We only have one linearly-independent equation, and our problem is under-constrained - we effectively only have one eqution for two unknowns with infinitely many possibly solutions.\n",
     "\n",
-    "If we replaced the RHS vector with \\\\((4,7)^T\\\\), then the two equations would be contradictory - in this case we have no solutions.\n",
+    "If we replaced the RHS vector with $(4,7)^T$, then the two equations would be contradictory - in this case we have no solutions.\n",
     "\n",
     "Note that a set of vectors where one can be written as a linear sum of the others are termed linearly-dependent. When this is not the case the vectors are termed linearly-independent.\n",
     "\n",
-    "```{admonition} The following properties of a square \\\\(n\\times n\\\\) matrix are equivalent:\n",
+    "```{admonition} The following properties of a square $n\\times n$ matrix are equivalent:\n",
     "\n",
-    "* \\\\(\\det(A)\\ne 0\\implies\\\\) A is non-singular\n",
-    "* the columns of \\\\(A\\\\) are linearly independent\n",
-    "* the rows of \\\\(A\\\\) are linearly independent\n",
-    "* the columns of \\\\(A\\\\) span \\\\(n\\\\)-dimensional space (we can reach any point in \\\\(\\mathbb{R}^N\\\\) through a linear combination of these vectors)\n",
-    "* \\\\(A\\\\) is invertible, i.e. there exists a matrix \\\\(A^{-1}\\\\) such that \\\\(A^{-1}A = A A^{-1}=I\\\\)\n",
-    "* the matrix system \\\\(A\\pmb{x}=\\pmb{b}\\\\) has a unique solution for every vector \\\\(b\\\\)\n",
+    "* $\\det(A)\\ne 0\\implies$ A is non-singular\n",
+    "* the columns of $A$ are linearly independent\n",
+    "* the rows of $A$ are linearly independent\n",
+    "* the columns of $A$ span $n$-dimensional space (we can reach any point in $\\mathbb{R}^N$ through a linear combination of these vectors)\n",
+    "* $A$ is invertible, i.e. there exists a matrix $A^{-1}$ such that $A^{-1}A = A A^{-1}=I$\n",
+    "* the matrix system $A\\pmb{x}=\\pmb{b}$ has a unique solution for every vector $b$\n",
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -819,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
