--- a/notebooks/c_mathematics/statistics/Linear_Regression.ipynb
+++ b/notebooks/c_mathematics/statistics/Linear_Regression.ipynb
@@ -16,54 +16,64 @@
     "```{index} Linear regression\n",
     "```\n",
     "## Theory\n",
-    "Linearity refers to a linear relationship between two or more variables. Linear regression aims to predict the dependent variable value (\\\\(y\\\\)) based on a given independent variable (\\\\(x\\\\)). Therefore, linear regression finds out a linear relationship between \\\\(x\\\\) and \\\\(y\\\\).\n",
+    "Linearity refers to a linear relationship between two or more variables. Linear regression aims to predict the dependent variable value ($y$) based on a given independent variable ($x$). Therefore, linear regression finds out a linear relationship between $x$ and $y$.\n",
     "\n",
-    "With noisy data or multiple different measurements of \\\\(y\\\\) at a given value of \\\\(x\\\\), we may not be able to fit a function/curve that goes through all points exactly. Therefore, in linear regresssion the aim is to find a function that best approximates the data but does not necessarily go through all the points.\n",
+    "With noisy data or multiple different measurements of $y$ at a given value of $x$, we may not be able to fit a function/curve that goes through all points exactly. Therefore, in linear regresssion the aim is to find a function that best approximates the data but does not necessarily go through all the points.\n",
     "\n",
     "### Simple linear regression\n",
-    "Plotting the independent variable \\\\(x\\\\) on the x-axis and dependent variable \\\\(y\\\\) on the y-axis, linear regression gives us a straight line with equation:\n",
-    "\\\\[y=b_0+b_1x,\\\\]\n",
-    "where \\\\(b_0\\\\) is the intercept and \\\\(b_1\\\\) is the slope of the line. The \\\\(x\\\\) and \\\\(y\\\\) variables remain the same as the data points cannot change, however, the intercept (\\\\(b_0\\\\)) and slope (\\\\(b_1\\\\)) can be modified to obtain the most optimal value for the intercept and the slope. The linear regression algorithm fits multiple lines on the data points and returns the line that results in the smallest error. This may be achieved by minimising the sum of the squares of the differences to the data, known as a least squares approximation.\n",
+    "Plotting the independent variable $x$ on the x-axis and dependent variable $y$ on the y-axis, linear regression gives us a straight line with equation:\n",
+    "\n",
+    "$$y=b_0+b_1x,$$\n",
+    "\n",
+    "where $b_0$ is the intercept and $b_1$ is the slope of the line. The $x$ and $y$ variables remain the same as the data points cannot change, however, the intercept ($b_0$) and slope ($b_1$) can be modified to obtain the most optimal value for the intercept and the slope. The linear regression algorithm fits multiple lines on the data points and returns the line that results in the smallest error. This may be achieved by minimising the sum of the squares of the differences to the data, known as a least squares approximation.\n",
     "\n",
     "[<img src=\"https://s3.amazonaws.com/acadgildsite/wordpress_images/Data+Science/2Linear+regression+Case+Study+2/blogs+LR+2+pic+1.png\" style=\"width:300px;\"/>](https://acadgild.com/blog/2linear-regression-case-study-2)\n",
     "\n",
     "Figure 1: Plot of scatter points in 2D space (blue) and line that results in the least error (red).\n",
     "\n",
     "### Multiple linear regression\n",
-    "This can be extended to multiple linear regression where there are more than two variables. In this scenario, the dependent variable is dependent upon several independent variables \\\\(x= (x_1, …, x_n)\\\\) where \\\\(n\\\\) is the number of variables. You can assume a linear relationship between \\\\(x\\\\) and \\\\(y\\\\) with the regression equation:\n",
-    "\\\\[y=b_0+b_1x_1+b_2x_2+b_3x_3+…b_nx_n +\\epsilon,\\\\]\n",
-    "where \\\\(b_0,b_1,...,b_n\\\\) are the regression coefficients and \\\\(\\epsilon\\\\) is the random error.\n",
+    "This can be extended to multiple linear regression where there are more than two variables. In this scenario, the dependent variable is dependent upon several independent variables $x= (x_1, …, x_n)$ where $n$ is the number of variables. You can assume a linear relationship between $x$ and $y$ with the regression equation:\n",
+    "\n",
+    "$$y=b_0+b_1x_1+b_2x_2+b_3x_3+…b_nx_n +\\epsilon,$$\n",
+    "\n",
+    "where $b_0,b_1,...,b_n$ are the regression coefficients and $\\epsilon$ is the random error.\n",
     "\n",
     "### Root-mean-square error\n",
     "```{index} Root-mean-square error\n",
     "```\n",
-    "There are many methods to evaluate the performance of the linear regression algorithm. Two commonly used methods are the [root-mean-square error](https://en.wikipedia.org/wiki/Root-mean-square_deviation) (RMSE) and the [coefficient of determination](https://en.wikipedia.org/wiki/Coefficient_of_determination) (\\\\(R^2\\\\) score).\n",
+    "There are many methods to evaluate the performance of the linear regression algorithm. Two commonly used methods are the [root-mean-square error](https://en.wikipedia.org/wiki/Root-mean-square_deviation) (RMSE) and the [coefficient of determination](https://en.wikipedia.org/wiki/Coefficient_of_determination) ($R^2$ score).\n",
     "\n",
     "RMSE is the square root of the sum of all errors squared divided by the number of values. The equation for the RMSE is:\n",
-    "\\\\[RMSE=\\sqrt{\\frac{1}{n}\\sum_{i=1}^{n} (\\hat{y_i} - y_i)^2},\\\\]\n",
-    "where \\\\(\\hat{y_1}, \\hat{y_2}, ..., \\hat{y_n}\\\\)  are the predicted values, \\\\(y_1, y_2, ..., y_n\\\\) are the observed values and \\\\(n\\\\) is the number of observations.\n",
+    "\n",
+    "$$RMSE=\\sqrt{\\frac{1}{n}\\sum_{i=1}^{n} (\\hat{y_i} - y_i)^2},$$\n",
+    "\n",
+    "where $\\hat{y_1}, \\hat{y_2}, ..., \\hat{y_n}$  are the predicted values, $y_1, y_2, ..., y_n$ are the observed values and $n$ is the number of observations.\n",
     "\n",
     "### Coefficient of determination\n",
     "```{index} Coefficient of determination\n",
     "```\n",
     "The coefficient of determinaion is a statistical measure of how close the data are to the linear regression line.\n",
     "\n",
-    "\\\\[R^2 = \\frac{\\text{Explained variation}}{\\text{Total variation}}.\\\\]\n",
     "\n",
-    "\\\\(R^2\\\\) is therefore always between 0 and 100%. The higher the \\\\(R^2\\\\), the better the model fits the data. \n",
+    "$$R^2 = \\frac{\\text{Explained variation}}{\\text{Total variation}}.$$\n",
     "\n",
-    "\\\\(R^2\\\\) is defined as follows:\n",
-    "\\\\[R^2 = 1-\\frac{SS_r}{SS_t},\\\\\\\\\\\\\n",
+    "\n",
+    "$R^2$ is therefore always between 0 and 100%. The higher the $R^2$, the better the model fits the data. \n",
+    "\n",
+    "$R^2$ is defined as follows:\n",
+    "\n",
+    "$$R^2 = 1-\\frac{SS_r}{SS_t},\\\\\\\\\\\\\n",
     "SS_r=\\sum_{i=1}^{n} ({y_i} - \\hat{y_i})^2,\\\\\\\\\\\\\n",
-    "SS_t=\\sum_{i=1}^{n} ({y_i} - \\bar{y_i})^2.\\\\]\n",
+    "SS_t=\\sum_{i=1}^{n} ({y_i} - \\bar{y_i})^2.$$\n",
     "\n",
-    "\\\\(SS_r\\\\) is the sum of squared regression and represents the variation explained by the linear regression model.\n",
     "\n",
-    "\\\\(SS_t\\\\) is the sum of squared yotal and represents the total variation in the data.\n",
+    "$SS_r$ is the sum of squared regression and represents the variation explained by the linear regression model.\n",
     "\n",
-    "\\\\(y_1, y_2, ..., y_n\\\\) are the observed values, \\\\(\\hat{y_1}, \\hat{y_2}, ..., \\hat{y_n}\\\\)  are the predicted values of \\\\(y\\\\), and \\\\(\\bar{y_1}, \\bar{y_2}, ..., \\bar{y_n}\\\\) are the mean values of \\\\(y\\\\).\n",
+    "$SS_t$ is the sum of squared yotal and represents the total variation in the data.\n",
     "\n",
-    "Based on the above equation the \\\\(R^2\\\\) score usually ranges from 0 to 1, but can be negative if the model is completely wrong."
+    "$y_1, y_2, ..., y_n$ are the observed values, $\\hat{y_1}, \\hat{y_2}, ..., \\hat{y_n}$  are the predicted values of $y$, and $\\bar{y_1}, \\bar{y_2}, ..., \\bar{y_n}$ are the mean values of $y$.\n",
+    "\n",
+    "Based on the above equation the $R^2$ score usually ranges from 0 to 1, but can be negative if the model is completely wrong."
    ]
   },
   {
@@ -74,9 +84,11 @@
     "\n",
     "Least squares fitting minimises the sum of the squares of the differences between the data provided and the polynomial approximation. In other words it minimises the folowing expression:\n",
     "\n",
-    "\\\\[E=\\sum_{i=0}^{N} (P(x_i) - y_i)^2,\\\\]\n",
     "\n",
-    "where \\\\(E\\\\) is the squared error, \\\\(P(x_i)\\\\) is the value of the polynomial function that has been fit to the data evaluated at point \\\\(x_i\\\\), and \\\\(y_i\\\\) is the \\\\(i^{th}\\\\) data value.\n",
+    "$$E=\\sum_{i=0}^{N} (P(x_i) - y_i)^2,$$\n",
+    "\n",
+    "\n",
+    "where $E$ is the squared error, $P(x_i)$ is the value of the polynomial function that has been fit to the data evaluated at point $x_i$, and $y_i$ is the $i^{th}$ data value.\n",
     "\n",
     "[<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/Linear_least_squares_example2.svg/440px-Linear_least_squares_example2.svg.png\" style=\"width:300px;\"/>](https://en.wikipedia.org/wiki/Linear_least_squares)\n",
     "\n",
@@ -120,7 +132,7 @@
     "\n",
     "Firstly, we will use `numpy.polyfit` in order to carry out the least squares error calculation to fit a linear polynomial. Next, we will use `scipy.stats.linregress` to perform linear regression using a [SciPy](https://www.scipy.org/) implementation of linear regression. Then, we will compare the slope and the intercept (the two coefficients in the linear polynomial) between the two approaches.\n",
     "\n",
-    "The coefficient of determination is also determined by default from the linear regression calculation. To check these values agree we will also calculate the \\\\(R^2\\\\) value using the `numpy.polyfit` data.\n",
+    "The coefficient of determination is also determined by default from the linear regression calculation. To check these values agree we will also calculate the $R^2$ value using the `numpy.polyfit` data.\n",
     "\n",
     "Let's define a function to evaluate squared error:"
    ]
@@ -396,7 +408,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
