--- a/notebooks/d_geosciences/Deforming the Earth/Basics_of_Stress_and_Strain.ipynb
+++ b/notebooks/d_geosciences/Deforming the Earth/Basics_of_Stress_and_Strain.ipynb
@@ -46,22 +46,14 @@
     "\n",
     "Strain can be defined as below:\n",
     "\n",
-    "* **Linear Strain**, $e = \\frac{(L - L_0)}{L_0}$, where $e$ is the linear strain, $L_0$ is the length of the body before deformation, and, $L$ being the new length post deformation\n",
-    "*\n"
+    "**Linear Strain**, $e = \\frac{(L - L_0)}{L_0}$, where $e$ is the linear strain, $L_0$ is the length of the body before deformation, and, $L$ being the new length post deformation\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -75,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
