--- a/notebooks/d_geosciences/Waves/Introduction_To_Waves.ipynb
+++ b/notebooks/d_geosciences/Waves/Introduction_To_Waves.ipynb
@@ -237,7 +237,7 @@
     "\n",
     "Thus, \n",
     "\n",
-    "$$a = \\frac{F}{ml}y$$ (tussenstap). \n",
+    "$$a = \\frac{F}{ml}y$$ (tussenstap)\n",
     "\n",
     "If the restoring force is tension from a string for example, it can be approximated as $F=-2T$, considering a string pulls the body from the left and right side.\n",
     "\n",
@@ -371,7 +371,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
